Fix z-index issues

--- a/app/assets/stylesheets/components/card.css.less
+++ b/app/assets/stylesheets/components/card.css.less
@@ -326,7 +326,7 @@ a.card-title-link:hover {
   position: absolute;
   right: 24px;
   top: 33px;
-  z-index: 10;
+  z-index: 4;
 
   form {
     display: inline;
