--- a/app/assets/stylesheets/components/tutor.css.less
+++ b/app/assets/stylesheets/components/tutor.css.less
@@ -51,7 +51,7 @@
   position: absolute;
   color: @content-bg;
   width: 20px;
-  z-index: 10;
+  z-index: 4;
   top: 0;
   bottom: 0;
   left: -12px;
